import { render, cleanup } from "@testing-library/react";
import "@testing-library/jest-dom/extend-expect";
import PhotoList from "../";

afterEach(cleanup);

describe("PhotoList is rendering", () => {
  it("renders", () => {
    render(<PhotoList />);
  });

  it("renders to snapshot", () => {
    const { asFragment } = render(<PhotoList />);
    expect(asFragment()).toMatchSnapshot();
  });

  it("renders from photo list depending on category passed", () => {
    const { asFragment } = render(<PhotoList category={"portraits"} />);
    expect(asFragment()).toMatchSnapshot();
  });
});
