// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoList is rendering renders from photo list depending on category passed 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex-row"
    >
      <img
        alt="Cat green eyes"
        class="img-thumbnail mx-1"
        src="0.jpg"
      />
      <img
        alt="Green parrot"
        class="img-thumbnail mx-1"
        src="1.jpg"
      />
      <img
        alt="Yellow macaw"
        class="img-thumbnail mx-1"
        src="2.jpg"
      />
      <img
        alt="Pug smile"
        class="img-thumbnail mx-1"
        src="3.jpg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PhotoList is rendering renders to snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex-row"
    />
  </div>
</DocumentFragment>
`;
